--- a/index.html
+++ b/index.html
@@ -2,30 +2,8 @@
 <html>
     <head>
         <title>Program Happiness</title>
-        <style>
-        navigation {
-        font-family:sans-serif;
-        text-align:center;
-            }
-        
-        ul {
-        text-align:center;
-        list-style-type:none;
-        padding: 0;
-        display: inline;
-        }
-        
-        li {
-        display: inline;
-        }
-        </style>
     </head>
     <body>
-        <div id ='navigation'>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-            </ul>
-        </div>
+        <h1>Let's Program Happiness</h1>
     </body>
 </html>
