--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Program Happiness</title>
+        <style>
+            h1 {
+            font-family:"Comic Sans MS", cursive, sans-serif;  
+            }
+        </style>
     </head>
     <body>
         <h1>Let's Program Happiness</h1>
