--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             font-family:"Comic Sans MS", sans-serif;
             text-align:center;
             }
+            
+            h2 {
+            font-family:"Comic Sans MS", sans-serif;
+            text-align:center;
+            font-size:50px;
+            }
         </style>
     </head>
     <body>
@@ -27,5 +33,12 @@
            programming. Program Happiness was orignally thought<br>
            of by <a href='https://scratch.mit.edu/users/ScratchStang/'>ScratchStang</a>. <a href='https://scratch.mit.edu/users/bjskistad/'>bjskistad</a> then proceeded to make<br>
            this organization. Let's Program Happiness.</p>
+        <h2>How Can I Help?</h2>
+        <p>We appreciate that you want to help! We currently<br>
+           want to make the website more user friendly, so<br>
+           that people will want to visit the site daily.<br>
+           We are also looking for administrators if this<br>
+           was completed. Use the contact button at the bottom<br>
+           of the page.</p>
     </body>
 </html>
