--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
            programming. Program Happiness was orignally thought<br>
            of by <a href='https://scratch.mit.edu/users/ScratchStang/'>ScratchStang</a>. <a href='https://scratch.mit.edu/users/bjskistad/'>bjskistad</a> then proceeded to make<br>
            this organization. Let's Program Happiness.</p>
-        <h2>How Can I Help?</h2>
-        <p>We appreciate that you want to help! We currently<br>
-           want to make the website more user friendly, so<br>
-           that people will want to visit the site daily.<br>
-           We are also looking for administrators if this<br>
-           was completed. Use the contact button at the bottom<br>
-           of the page.</p>
+        <h1>What is Program Happiness?</h1>
+        <p>As we mentioned before, Program Happiness is an<br>
+           organization that encourages programming,<br>
+           espically in children. Program Happiness wants<br>
+           to promote website that's encourage programming.<br>
+           such as <a href='https://scratch.mit.edu'>Scratch</a>. Feel free to contact us if you know a website!</p>
     </body>
 </html>
